--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,9 +1,14 @@
-@font-face {
-  font-family: "Smeshariki";
-  font-weight: 400;
-  font-style: normal;
-  src: url(../fonts/SmesharikiFont.woff2) format("woff2"),
-  url(../fonts/SmesharikiFont.woff) format("woff");
+:root{
+  --green-color:#0a775f;
+  --text-color:#333;
+  --heading-color:#000000;
+  --white-bg:#ffffff;
+  --orange-btn:#c99b67;
+  --header-bg:#f1d1ad;
+}
+*:focus{
+  outline: 2px dotted var(--green-color);
+  outline-offset: 3px;
 }
 html{
   box-sizing: border-box;
@@ -20,12 +25,14 @@ body{
   flex-direction: column;
   height: 100%;
   background-color: #fff;
-  color: #222;
-  font-family: "Arial",san-serif;
+  color: var(--text-color);
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 24px;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 img{
   max-width: 100%;
@@ -34,12 +41,58 @@ img{
 /*  CONTAINER */
 .container{
   width: 100%;
-  max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1440px;
+  padding-left:20px;
+  padding-right:20px;
   margin-left: auto;
   margin-right: auto;
 }
 .main-content{
   flex-grow: 1;
+}
+/* Site header */
+.site-header {
+  background-image: url(../img/bg-image.png);
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.site-header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 50px;
+  padding-left: 50px;
+}
+.site-header__logo {
+  display: block;
+}
+.site-header__img {
+  width: 235px;
+  height: 24px;
+}
+.sitenav__list{
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.sitenav__item:not(:last-child){
+  margin-right: 40px;
+}
+.sitenav__link{
+  display: block;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: normal;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: var(--text-color);
+  transition: all 0.4s ease;
+}
+.sitenav__link:hover{
+  color: var(--green-color);
+}
+.sitenav__link:active{
+  opacity: 0.6;
 }
